fix sizing of buttons and alignment

--- a/app/assets/stylesheets/layouts/user_header.scss
+++ b/app/assets/stylesheets/layouts/user_header.scss
@@ -1,20 +1,32 @@
 .user-header {
 
   &__image {
-    img {
-      float: left;
-      height: 104px;
-      width: 104px;
-      object-fit: cover;
+    width: 16.66667%;
+    max-width: 104px;
+    max-height: 104px;
+    float: left;
+    object-fit: cover;
+    @include media-breakpoint-down(md) {
+      max-height: 52px;
+      max-width: 52px;
+    }
+
+    &--xs {
       @include media-breakpoint-down(md) {
-        height: 36px;
-        width: 36px;
+        max-height: 36px;
+        max-width: 36px;
       }
     }
   }
 
   &__info {
     margin-left: 16px;
+
+    &--margin-0 {
+      margin-top: 8px;
+      margin-left: 0;
+    }
+
   }
 
   &__name {
@@ -29,20 +41,21 @@
 
   &__nav-wrapper {
     margin-left: auto;
-
-    .edit-profile-button {
-      margin-top: 15px;
-      border-radius: 4px;
-      font-size: 18px;
-      text-decoration: none;
-      color: $theme-secondary;
-      border: solid 2px $theme-secondary;
-      padding: 10px;
-      width: 100% * 2 / 3;
-      text-align: center;
-
-      @include media-breakpoint-down(md) {
-        width: 100%;
+    .edit-profile-button-container {
+      align-self: flex-end;
+      display: none;
+      @include media-breakpoint-up(lg) {
+        margin-top: 16px;
+        display: flex;
+        .btn {
+          width: 296px;
+        }
+      }
+      &--d-lg-none {
+        display: block;
+        @include media-breakpoint-up(lg) {
+          display: none !important;
+        }
       }
     }
   }
@@ -54,6 +67,8 @@
   }
 
   &__social-networks {
+    min-width: 130px;
+
     a {
       display: inline-block;
       color: $theme-secondary;
@@ -63,12 +78,6 @@
       &:hover {
         text-decoration: none;
       }
-    }
-  }
-
-  .edit-profile-button, &__location, &__social-networks {
-    @include media-breakpoint-down(md) {
-      display: none;
     }
   }
 
@@ -116,26 +125,6 @@
         text-decoration: none;
         background: $theme-secondary;
         color: $text-light;
-      }
-    }
-  }
-
-  &__nav-wrapper {
-    margin-left: auto;
-
-    .edit-profile-button {
-      margin-top: 15px;
-      border-radius: 4px;
-      font-size: 18px;
-      text-decoration: none;
-      color: $theme-secondary;
-      border: solid 2px $theme-secondary;
-      padding: 10px;
-      width: 100% * 2 / 3;
-      text-align: center;
-
-      @include media-breakpoint-down(md) {
-        width: 100%;
       }
     }
   }
